# cs480Ignatyuk

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  README.md  README.md~  Tutorial  cmake_install.cmake  config.txt  start.sh
CMakeModules/: FindBtC.cmake  FindBtD.cmake  FindBtM.cmake  Findassimp.cmake  Findassimp.cmake~  FinddevIL.cmake  FinddevILU.cmake  FinddevILUT.cmake  Findfreetype.cmake  Findftgl.cmake
PA0/: README.md
PA0/include/: graphics.h
PA0/src/: graphics.cpp  object.cpp  shader.cpp
PA1/: CMakeLists.txt
PA1/src/: shader.cpp~
include/: cam.h  camera.h  engine.h  graphics.h  graphics.h~  graphics_headers.h  image_helper.h  interacter.h  menu.h  object.h  object.h~  shader.h  window.h
objects/models/: desk.mtl  desk2.mtl  desk3.mtl  door.mtl  doorframe.mtl  harris.mtl  harris2.mtl  projector.mtl  rings.mtl  teachers_desk.mtl  teachers_desk2.mtl
shaders/: shader (copy).frag  shader.frag  shader.vert  shader.vert~  shaderFL.frag  shaderFL.vert  shaderMenu.frag  shaderMenu.vert  shaderVL.frag  shaderVL.vert
src/: cam.cpp  camera.cpp  engine.cpp  engine.cpp~  graphics.cpp  graphics.cpp~  image_helper.cpp  interacter.cpp  main.cpp  menu.cpp  object.cpp  object.cpp~  shader.cpp  window.cpp
